# KiPFG

./: .gitignore  README.md  pyproject.toml
src/KiPFG/: bom_formatter.py  config_reader.py  generate.py  post_process.py  project_information.py
